<resources>
    <string name="app_name">kobraNateghi_COMP304_Lab3</string>
    <string-array name="arrayOfInfo">
        <item>Exercise 1</item>
        <item>Exercise 2</item>
        <item>Exercise 3</item>
    </string-array>


    <string-array name="spinnerArray">
        <item>20</item>
        <item>40</item>
        <item>60</item>
        <item>80</item>
    </string-array>

    <string name="textView1">Line Thickness</string>
    <string name="line_color">Line Color</string>
    <string name="arrow_keys">Arrow Keys</string>
    <string name="radiobutton">RadioButton</string>
    <string name="radioB_cyan">RadioButton</string>
    <string name="red">Red</string>
    <string name="yellow">yellow</string>
    <string name="cyan">Cyan</string>
    <string name="use_the_arrow_keys_to_draw">Use the arrow keys to draw</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
</resources>
