<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Excercise1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="60"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView1" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/line_color" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButtonRed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/red" />

                <RadioButton
                    android:id="@+id/radioButtonYellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow" />

                <RadioButton
                    android:id="@+id/radioButtonCyan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cyan" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arrow_keys" />

            <ImageButton
                android:id="@+id/imageViewUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="goUp"
                app:srcCompat="@drawable/upimage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton

                    android:id="@+id/imageViewRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goLeft"
                    app:srcCompat="@drawable/rightimage" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton

                    android:id="@+id/imageViewLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goRight"
                    app:srcCompat="@drawable/leftimage" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imageViewDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="goDown"
                app:srcCompat="@drawable/downimage" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clearCanvas"
                android:text="Clear" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/use_the_arrow_keys_to_draw" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@android:color/holo_green_dark" />

    </LinearLayout>

</LinearLayout>